--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,18 @@
 [tox]
 minversion=1.8
+envlist =
+    py{27,33,35}-cython,
+    py{27,33,35}-purec,
+    py{27,33,35}-purepy,
+    pypy
 
 [testenv]
 commands =
     python -B -R -tt -W ignore setup.py test
-
-basepython =
-    py27: python2.7
-    py33: python3.3
-    py34: python3.4
-    py35: python3.5
+setenv =
+    py{27,33,35}-cython: DETOUR_SKIP_EXTENSIONS=0
+    py{27,33,35}-purec: DETOUR_SKIP_EXTENSIONS=0
+    py{27,33,35}-purepy: DETOUR_SKIP_EXTENSIONS=1
+    pypy: DETOUR_SKIP_EXTENSIONS=1
+deps:
+    py{27,33,35}-cython: cython==0.25.2
