setenv looks to happen after the sdist has been made, so switching compilation on or off in the setup.py doesn't work. Maybe usedevelop instead?

--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,19 @@
 [tox]
 minversion=1.8
 envlist =
-    py{27,33,35}-cython,
-    py{27,33,35}-purec,
-    py{27,33,35}-purepy,
+    py{27,35}-cython,
+    py{27,35}-purec,
+    py{27,35}-purepy,
     pypy
 
 [testenv]
+usedevelop = true
 commands =
     python -B -R -tt -W ignore setup.py test
 setenv =
-    py{27,33,35}-cython: DETOUR_SKIP_EXTENSIONS=0
-    py{27,33,35}-purec: DETOUR_SKIP_EXTENSIONS=0
-    py{27,33,35}-purepy: DETOUR_SKIP_EXTENSIONS=1
+    py{27,35}-cython: DETOUR_SKIP_EXTENSIONS=0
+    py{27,35}-purec: DETOUR_SKIP_EXTENSIONS=0
+    py{27,35}-purepy: DETOUR_SKIP_EXTENSIONS=1
     pypy: DETOUR_SKIP_EXTENSIONS=1
 deps:
-    py{27,33,35}-cython: cython==0.25.2
+    py{27,35}-cython: cython==0.25.2
