Add a prospector configuration, and execute it via tox & travis. Based massively on the docs blogged by Jeff Quast (jquast) here: https://jeffquast.com/post/tox-and-prospector/

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,8 @@ env:
   - TOX_ENV=py33-purepy
   - TOX_ENV=py35-purepy
   - TOX_ENV=pypy
+  - TOX_ENV=prospector
+
+matrix:
+  allow_failures:
+  - env: TOXENV=prospector
