--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
-minversion=1.8
+minversion=2.2
 envlist =
     py{27,35}-cython,
     py{27,35}-purec,
     py{27,35}-purepy,
     pypy
+    prospector
 
 [testenv]
 usedevelop = true
@@ -17,3 +18,11 @@ setenv =
     pypy: DETOUR_SKIP_EXTENSIONS=1
 deps:
     py{27,35}-cython: cython==0.25.2
+
+
+[testenv:prospector]
+deps =
+    prospector[with_dodgy,with_frosted,with_mccabe,with_pep257,with_pep8,with_pyroma,with_vulture]
+commands =
+    prospector
+ignore_outcome = true
